--- a/config_luckpool.json
+++ b/config_luckpool.json
@@ -16,10 +16,10 @@
 		"timeout": 150
 	}
 	],
-	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.G570F",
+	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8_1",
 	"pass": "x",
 	"algo": "verus",
-	"threads": 4,
+	"threads": 8,
 	"cpu-priority": 1,
 	"retry-pause": 5,
 	"api-allow": "192.168.31.0/16",
