--- a/config_luckpool.json
+++ b/config_luckpool.json
@@ -16,7 +16,7 @@
 		"timeout": 150
 	}
 	],
-	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8Plus3",
+	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8_2",
 	"pass": "x",
 	"algo": "verus",
 	"threads": 8,
