--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
 		"timeout": 150
 	}
 	],
-	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8_6",
+	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8P_1",
 	"pass": "x",
 	"algo": "verus",
 	"threads": 8,
