--- a/config_zerg_party.json
+++ b/config_zerg_party.json
@@ -17,7 +17,7 @@
 	}
 	],
 	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229",
-	"pass": "c=VRSC,mc=VRSC,m=party.qwerty11,ID=XR8T_1",
+	"pass": "c=VRSC,mc=VRSC,m=party.qwerty11,ID=S8P_3",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
