--- a/config_verus_io.json
+++ b/config_verus_io.json
@@ -16,12 +16,12 @@
 		"timeout": 120
 	}
 	],
-	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229",
-	"pass": "c=VRSC,mc=VRSC,m=party.qwerty11,ID=S8_1",
+	"user": "RTRHKeafFrSRWngfWXhZdmBBVbdw6wj229.S8_1",
+	"pass": "x",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
 	"retry-pause": 5,
-	"api-allow": "192.168.1.0/16",
+	"api-allow": "192.168.31.0/16",
 	"api-bind": "0.0.0.0:4068"
 }
