--- a/config_luckpool.json
+++ b/config_luckpool.json
@@ -2,17 +2,17 @@
 	"pools":[
 	{
 		"name": "Luckpool",
-        	"url": "stratum+tcp://pool.verus.io:9998",
+        	"url": "stratum+tcp://eu.luckpool.net:3960",
 		"timeout": 150
 	},
 	{
 		"name": "Luckpool2",
-        	"url": "stratum+tcp://pool.verus.io:9998",
+        	"url": "stratum+tcp://eu.luckpool.net:3957",
 		"timeout": 150
 	},
 	{
 		"name": "Luckpool3",
-        	"url": "stratum+tcp://pool.verus.io:9998",
+        	"url": "stratum+tcp://eu.luckpool.net:3957",
 		"timeout": 150
 	}
 	],
